# blog

./: .gitignore  404.html  README.md  _config.yml  feed.xml  index.html  pyproject.toml  robots.txt  settings.ini  sitemap.xml
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md
_hidden/: _hidden_2021-05-23-voting_authority_1_problem.ipynb
_notebooks/: 2021-05-23-voting_authority_1_problem.ipynb  2021-05-23-voting_authority_2_proof.ipynb  2021-05-29-proto-optional.ipynb  2021-05-30-visualizing-trees.ipynb
_notebooks/code/: my_proto.proto  my_proto_pb2.py
_notebooks/code_snippets_2021_05_29/: user_1.proto  user_1_pb2.py  user_2_optional.proto  user_2_optional_pb2.py
_pages/: about.md  publications.md
_posts/: 2021-05-23-voting_authority_1_problem.md  2021-05-23-voting_authority_2_proof.md  2021-05-29-proto-optional.md  2021-05-30-visualizing-trees.md
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
fastpages/jupyter/2021/05/23/: voting_authority_1_problem.html  voting_authority_2_proof.html
fastpages/jupyter/2021/05/30/: visualizing-trees.html
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
publications/: index.html
search/: index.html
